# nntp-proxy

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  AUTHENTICATION.md  BACKEND_AVAILABILITY_CACHE_DESIGN.md  CACHE-PROXY.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DUPLICATION-ANALYSIS.md  Dockerfile  GUARDRAILS-TODO.md  LICENSE  LIMITATIONS.md  MEMORY.md  README.md  REFACTORING-OPPORTUNITIES.md  SSL_IMPLEMENTATION.md  TCP_TUNING.md  TESTING.md  TYPE_AUDIT_FINDINGS.md  TYPE_AUDIT_PLAN.md  WASTE-ANALYSIS.md  _typos.toml  audit.toml  baseline-bench.txt  cache-config.example.toml  clippy.toml  config.cache.toml  config.example.toml  config.full.toml  config.minimal.toml  config.toml  deny.toml  docker-compose.yml  entities.json  (+7 more)
.cargo/: config.toml
.config/: nextest.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  quality-dispatch.yml  rust.yml
benches/: cache_ingest.rs  cache_ingest_semantic.rs  cache_lookup.rs  cache_miss_roundtrip_callgrind.rs  cache_response_generation.rs  command_parsing.rs  end_to_end_proxy.rs  multiline_framing_boundaries.rs  request_batch_parse.rs  request_classifier_callgrind.rs  request_serialization.rs  response_parsing.rs  router_selection.rs  streaming_roundtrip.rs  tail_buffer_boundaries.rs  yenc_decoding.rs  yenc_decoding_iai.rs
docs/: ADAPTIVE_ROUTING.md  RELEASE_BENCHMARKS.md  RFC3977_RESPONSE_CODES.md  TUI_REFACTORING.md  TUI_REFACTORING_COMPLETE.md  TUI_TEST_IMPROVEMENTS.md  development.md  security-advisories.md
docs/archive/: cache-miss-threading-profile-2026-05-15.md  release-benchmarks.md
docs/internal/: architecture.mmd  hot-path-allocation-plan.md  nzb-downloader-design.md  request-flow.mmd  types.mmd
docs/operator/: caching.md  configuration.md  getting-started.md  operations.md  runtime-and-routing.md  tcp-tuning.md
docs/reference/: rfc3977-response-codes.md
examples/: test-article-download.rs
nix/: module.nix  package.nix
scripts/: audit-advisories  bench-release-cache-miss-e2e.sh  build-release.sh  check-guardrails.sh  check-rust-version.sh  install-git-hooks.sh  parse_flamegraph  parse_flamegraph.rs  parse_perfdata  parse_perfdata.rs  profile-latency.sh  profile-mem.sh  profile.sh  quality-deep.sh  quality-fast.sh  quality-pr.sh
src/: args.rs  compression.rs  config.rs  connection_error.rs  constants.rs  formatting.rs  io_util.rs  lib.rs  lib.rs.backup  logging.rs  macros.rs  main.rs  network.rs  pipeline_timing.rs  proxy.rs  runtime.rs  session.rs  stream.rs  streaming.rs  test_macros.rs  tls.rs  types.rs
src/auth/: backend.rs  handler.rs  mod.rs
src/cache/: article.rs  availability.rs  availability_index.rs  entry_helpers.rs  hybrid.rs  hybrid_codec.rs  location.rs  mock_hybrid.rs  mod.rs  session.rs  ttl.rs
src/client/: mod.rs
src/command/: classifier.rs  handler.rs  mod.rs  types.rs  validation.rs
src/config/: defaults.rs  loading.rs  mod.rs  types.rs  validation.rs
src/health/: mod.rs  types.rs
src/metrics/: backend_stats.rs  collector.rs  connection_stats.rs  exporter.rs  mod.rs  snapshot.rs  store.rs  types.rs  user_stats.rs
src/network/: optimizers.rs
src/pool/: buffer.rs  connection.rs  connection_guard.rs  connection_pool.rs  connection_trait.rs  deadpool_connection.rs  dns.rs  health_check.rs  mod.rs  prewarming.rs  provider.rs  simple_connection.rs
src/protocol/: codes.rs  commands.rs  constants.rs  mod.rs  parser.rs  request.rs  response.rs  responses.rs
src/proxy/: builder.rs  lifecycle.rs  mod.rs
src/router/: adaptive.rs  backend_info.rs  backend_queue.rs  demux.rs  mod.rs  round_robin.rs  strategies.rs  tracker.rs
src/session/: auth_state.rs  backend.rs  common.rs  connection.rs  core.rs  error_classification.rs  forwarding.rs  handlers.rs  legacy.rs  metrics_ext.rs  mod.rs  mode_state.rs  multiline_framing.rs  precheck.rs  response_buffer.rs  response_strategy.rs  response_transfer.rs  retry.rs  routing.rs  session_error.rs  shared_client_writer.rs  state.rs  streaming.rs  tests.rs
src/stream/: connection_stream.rs  mod.rs
src/tui/: app.rs  constants.rs  dashboard.rs  helpers.rs  log_capture.rs  mod.rs  rate_estimator.rs  remote.rs  system_stats.rs  types.rs  ui.rs  ui_tests.rs
src/types/: config.rs  metrics.rs  metrics_recording.rs  network.rs  pool.rs  protocol.rs  tui.rs  validated.rs
tests/: cache_tests.rs  config_helpers.rs  integration_tests.rs  proxy_tests.rs  rfc3977_tests.rs  rfc4643_tests.rs  test_430_caching_bug.rs  test_430_retry.rs  test_adaptive_precheck.rs  test_adaptive_routing_properties.proptest-regressions  test_adaptive_routing_properties.rs  test_article_availability.rs  test_article_parsing.rs  test_auth_backend.rs  test_auth_bypass_prevention.rs  test_auth_integration.rs  test_auth_security.rs  test_authentication.rs  test_awr_per_command_integration.rs  test_backend_availability_edge_cases.rs  test_buffer_reuse_corruption.rs  test_cache_articles_430_bug.rs  test_cache_before_precheck.rs  test_cache_body_responses.rs  test_cache_helpers.rs  test_config_loading.rs  test_config_validation.rs  test_double_write_bug.rs  test_duplicate_greeting.rs  test_handle_client_dispatch.rs  test_health_checks.rs  test_helpers.rs  test_hybrid_mode_coverage.rs  test_metrics.rs  test_metrics_collector.rs  test_metrics_connection_stats.rs  test_metrics_modes.rs  test_metrics_types.rs  test_precheck_auto_properties.proptest-regressions  test_precheck_auto_properties.rs  (+18 more)
tests/cache/: adaptive_precheck.rs  article_availability.rs  availability_only.rs  body_responses.rs  bug_430_articles.rs  bug_430_caching.rs  cache_before_precheck.rs  helpers.rs  hybrid_integration.rs  mod.rs  tiered_ttl.rs  unified_cache.rs
tests/proxy/: compression.rs  hybrid_mode.rs  mod.rs
tests/rfc3977/: article.rs  article_by_msgid.rs  body_workflow.rs  commands.rs  discovery_commands.rs  errors.rs  head_stat.rs  list_variants.rs  mod.rs  multiline.rs  overview_commands.rs  response.rs  session.rs  session_state.rs  stateful_workflow.rs  unsupported.rs  utility_commands.rs  xover_edgecases.rs  (+1 more)
(+99 files in other folders)
