[package]
name = "nntp-proxy"
version = "0.2.0"
edition = "2024"
description = "High-performance NNTP proxy server with connection pooling and authentication"
license = "MIT"
repository = "https://github.com/mjc/nntp-proxy"
documentation = "https://docs.rs/nntp-proxy"
homepage = "https://github.com/mjc/nntp-proxy"
keywords = ["nntp", "proxy", "server", "networking", "usenet"]
categories = ["network-programming", "web-programming"]
authors = ["Mika Cohen <mjc@kernel.org>"]
readme = "README.md"

[[bin]]
name = "nntp-proxy"
path = "src/bin/nntp-proxy.rs"

[[bin]]
name = "nntp-cache-proxy"
path = "src/bin/nntp-cache-proxy.rs"

[lib]
name = "nntp_proxy"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
socket2 = "0.6"  # Safe cross-platform socket operations
crossbeam = "0.8"  # Lock-free data structures for high performance
nix = { version = "0.30", features = ["sched", "process"] }  # Low-level system calls for CPU pinning
deadpool = "0.12.3"
async-trait = "0.1.89"
memchr = "2.7"  # Fast byte searching for command parsing
uuid = { version = "1.0", features = ["v4"] }  # Unique IDs for request tracking
moka = { version = "0.12", features = ["future"] }  # Async LRU cache with TTL for article caching
tokio-native-tls = "0.3"  # TLS support for NNTP connections
native-tls = "0.2"  # Native TLS backend

[dev-dependencies]
tempfile = "3.23"
serial_test = "3.2"


[profile.release]
debug = true
