[package]
name = "nntp-proxy"
version = "0.2.1"
edition = "2024"
description = "High-performance NNTP proxy server with connection pooling and authentication"
license = "MIT"
repository = "https://github.com/mjc/nntp-proxy"
documentation = "https://docs.rs/nntp-proxy"
homepage = "https://github.com/mjc/nntp-proxy"
keywords = ["nntp", "proxy", "server", "networking", "usenet"]
categories = ["network-programming", "web-programming"]
authors = ["Mika Cohen <mjc@kernel.org>"]
readme = "README.md"

[[bin]]
name = "nntp-proxy"
path = "src/bin/nntp-proxy.rs"

[[bin]]
name = "nntp-cache-proxy"
path = "src/bin/nntp-cache-proxy.rs"

[lib]
name = "nntp_proxy"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "io-util", "time", "macros", "signal"] }
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.9"
tracing = { version = "0.1", features = ["std", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "ansi"] }
anyhow = "1.0"
thiserror = "2.0"
socket2 = { version = "0.6", features = ["all"] }  # Safe cross-platform socket operations
crossbeam = { version = "0.8", features = ["nightly"] }  # Lock-free data structures with nightly optimizations
nix = { version = "0.30", features = ["sched", "process"] }  # Low-level system calls for CPU pinning
deadpool = "0.12.3"
async-trait = "0.1.89"
memchr = { version = "2.7", features = ["libc"] }  # Fast byte searching with system optimizations
uuid = { version = "1.0", features = ["v4"] }  # Unique IDs for request tracking
moka = { version = "0.12", features = ["future", "atomic64"] }  # Async LRU cache with 64-bit atomic optimizations
bytes = "1.0"  # Efficient byte buffer for zero-copy operations
tokio-rustls = { version = "0.26", features = ["early-data", "ring"] }  # TLS support for NNTP connections  
rustls = { version = "0.23", features = ["ring", "std"], default-features = false }  # Pure Rust TLS implementation optimized for performance
rustls-native-certs = "0.8"  # Load system CA certificates
rustls-pemfile = "2.2"  # PEM file parsing for custom certificates
rustls-pki-types = "1.8"  # PKI types for rustls
webpki-roots = "1.0.3"  # Mozilla CA certificate bundle fallback


[dev-dependencies]
tempfile = "3.23"
serial_test = "3.2"
serde_json = "1.0"  # For testing serde implementations
divan = "0.1"  # Modern benchmarking framework

[[bench]]
name = "command_parsing"
harness = false

[[bench]]
name = "response_parsing"
harness = false


[profile.release]
debug = true
