[package]
name = "nntp-proxy"
version = "0.3.0"
edition = "2024"
description = "High-performance NNTP proxy server with connection pooling and authentication"
license = "MIT"
repository = "https://github.com/mjc/nntp-proxy"
documentation = "https://docs.rs/nntp-proxy"
homepage = "https://github.com/mjc/nntp-proxy"
keywords = ["nntp", "proxy", "server", "networking", "usenet"]
categories = ["network-programming", "web-programming"]
authors = ["Mika Cohen <mjc@kernel.org>"]
readme = "README.md"

[[bin]]
name = "nntp-proxy"
path = "src/bin/nntp-proxy.rs"

[[bin]]
name = "nntp-proxy-tui"
path = "src/bin/nntp-proxy-tui.rs"

[lib]
name = "nntp_proxy"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "io-util", "time", "macros", "signal"] }
futures = "0.3"  # Future combinators for join_all
clap = { version = "4.0", features = ["derive", "env", "std", "help"] }
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.9"
tracing = { version = "0.1", features = ["std"], default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "registry", "ansi"], default-features = false }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "2.0"
socket2 = { version = "0.6", features = ["all"] }  # Safe cross-platform socket operations
crossbeam = { version = "0.8", features = ["alloc", "std"] }  # Lock-free data structures with minimal features
nix = { version = "0.30", features = ["sched", "process"] }  # Low-level system calls for CPU pinning
deadpool = "0.12.3"
async-trait = "0.1.89"
memchr = { version = "2.7", features = ["libc"] }  # Fast byte searching with system optimizations
uuid = { version = "1.0", features = ["v4"] }  # Unique IDs for request tracking
moka = { version = "0.12", features = ["future"], default-features = false }  # Async LRU cache, minimal features
bytes = "1.0"  # Efficient byte buffer for zero-copy operations
ratatui = "0.29"  # Terminal UI framework
crossterm = "0.29"  # Cross-platform terminal manipulation
smallvec = "1.13"  # Stack-allocated vectors for small collections
dashmap = "6.1"  # Lock-free concurrent HashMap for metrics
sysinfo = "0.37"  # System metrics (CPU, memory) for monitoring

# Derive helpers to reduce newtype boilerplate
nutype = { version = "0.6", features = ["serde"] }  # Validated newtypes with automatic derives
derive_more = { version = "2.1", features = ["deref", "deref_mut", "display", "from", "into", "as_ref"] }  # Common derive macros

# TLS dependencies - use ring for smaller binaries (pure Rust, no C dependencies)
tokio-rustls = { version = "0.26", features = ["early-data", "ring"], default-features = false }  # TLS with ring only
rustls = { version = "0.23", features = ["ring", "std"], default-features = false }  # Pure Rust TLS with ring only
rustls-native-certs = "0.8"  # Load system CA certificates
rustls-pemfile = "2.2"  # PEM file parsing for custom certificates
rustls-pki-types = "1.8"  # PKI types for rustls
webpki-roots = "1.0.3"  # Mozilla CA certificate bundle fallback
crc32fast = "1.5.0"
yenc = "0.2.2"  # yEnc encoding/decoding - faster and more correct than custom impl
bytesize = { version = "2.3.1", features = ["serde"] }


[dev-dependencies]
tempfile = "3.23"
serde_json = "1.0"  # For testing serde implementations
divan = "0.1"  # Modern benchmarking framework
proptest = "1.5"  # Property-based testing for comprehensive coverage
yenc = "0.2.2"  # For benchmark comparison only

[[bench]]
name = "command_parsing"
harness = false

[[bench]]
name = "response_parsing"
harness = false

[[bench]]
name = "yenc_decoding"
harness = false


[profile.release]
debug = true          # No debug symbols for smaller binaries
# strip = false          # Strip symbols for even smaller size
# lto = false            # Link-time optimization for better performance
# codegen-units = 1     # Single codegen unit for better optimization
# overflow-checks = true  # Keep overflow checks for safety with untrusted network data
